# NSU-computational-math

./: .gitignore  README.md
dichotomy-method/: CMakeLists.txt
dichotomy-method/src/: main.c
dichotomy-method/test/: test.sh
difference-schemes/: CMakeLists.txt  Makefile  README.md
difference-schemes/docs/: REPORT.md
difference-schemes/include/: csv.h  diff_schemas.h  thomas_algorithm.h
difference-schemes/script/: graphics.py
difference-schemes/src/: csv.c  godunov_schema.c  implicit_schema.c  main.c  thomas_algorithm.c
numerical-integration/: CMakeLists.txt  README.md
numerical-integration/docs/: REPORT.md
numerical-integration/include/integration/: integration-methods.h
numerical-integration/include/runges-rule/: runges-rule.h
numerical-integration/src/: CMakeLists.txt
numerical-integration/src/integration/: left-riemann-sum.c  middle-riemann-sum.c  simpsons-rule.c
numerical-integration/src/runges-rule/: runges-rule.c
numerical-integration/test/: CMakeLists.txt
numerical-integration/test/integration/: main.c
numerical-integration/test/runges-rule/: main.c
numerical-solution-of-equation/: CMakeLists.txt  README.md
